Bug 259976 - Local subscription dialogue does not show up
Summary: Local subscription dialogue does not show up
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-15 18:08 UTC by Björn Balazs
Modified: 2011-02-15 18:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-12-15 18:08:22 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

The local subscriptions dialogue does not open. Tested for local folders and IMAP.

Windows CE - svn-1206670

Reproducible: Always
Comment 1 Sabine Faure 2010-12-24 00:11:04 UTC
I was able to open the 'Local subscriptions' dialogue today for both Imap and Local Folders on Linux.

So this seems to be a Windows specific issue.

N900, 4:4.6~.20101223.2034.git9cc0c3e-1maemo1.120883
Comment 2 Andre Heinecke 2011-01-13 10:58:15 UTC
I've added debug output locally in kdepimlibs/akonadi/subscriptiondialog.cpp constructor it is never called.
Neither is slotLocalSubscription in standardactionmanager.cpp

This is the debug output i've added:
http://paste.kde.org/2390/
This is the debug output during startup:
http://paste.kde.org/2392/
No debug output whatssoever when hitting the "Lokale Abonnements" action.
Comment 3 Tobias Koenig 2011-01-13 15:35:09 UTC
SVN commit 1214209 by tokoe:

Do not intercept ManageLocalSubscriptions action

We can use the default implementation from StandardActionManager,
now that it uses the mime type filter for subscription dialog as well.
This will also bring back the dialog on WinCE.

BUG: 259976


 M  +0 -11     standardmailactionmanager.cpp  
 M  +0 -1      standardmailactionmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214209