Do not intercept ManageLocalSubscriptions action

We can use the default implementation from StandardActionManager,
now that it uses the mime type filter for subscription dialog as well.
This will also bring back the dialog on WinCE.

BUG: 259976

svn path=/trunk/KDE/kdepimlibs/; revision=1214209